s/ged_move_pipept/ged_pipe_move_pnt/g
s/ged_prepend_pipept/ged_pipe_prepend_pnt/g
s/ins_pipept/pipe_ins_pnt/g
s/jitter_start_pt/jitter_start_pnt/g
s/kdtree_get_pt/kdtree_get_pnt/g
s/mat_scale_about_pt/mat_scale_about_pnt/g
s/metaballpt/metaball_pnt/g
s/mk_add_pipe_pt/mk_add_pipe_pnt/g
s/move_botpt/bot_move_pnt/g
s/move_botpts/bot_move_pnts/g
s/move_metaballpt/metaball_move_pnt/g
s/move_pipept/pipe_move_pnt/g
s/move_pipept/pipe_move_pnt/g
s/nmg_class_pt_f/nmg_class_pnt_f/g
s/nmg_class_pt_fu_except/nmg_class_pnt_fu_except/g
s/nmg_class_pt_l/nmg_class_pnt_l/g
s/nmg_class_pt_lu_except/nmg_class_pnt_lu_except/g
s/nmg_class_pt_s/nmg_class_pnt_s/g
s/nmg_classify_pt_loop/nmg_classify_pnt_loop/g
s/nmg_find_pt_in_face/nmg_find_pnt_in_face/g
s/nmg_find_pt_in_lu/nmg_find_pnt_in_lu/g
s/nmg_find_pt_in_model/nmg_find_pnt_in_model/g
s/nmg_find_pt_in_shell/nmg_find_pnt_in_shell/g
s/nmg_get_interior_pt/nmg_get_interior_pnt/g
s/nmg_move_edge_thru_pt/nmg_move_edge_thru_pnt/g
s/nmg_nurb_print_pt_type/nmg_nurb_print_pnt_type/g
s/pipept/pipe_pnt/g
s/prepend_pipept/pipe_prepend_pnt/g
s/rt_arb_add_pt/rt_arb_add_pnt/g
s/rt_ell_16pts/rt_ell_16pnts/g
s/rt_metaballpt_print/rt_metaball_pnt_print/g
s/rt_pipept_print/rt_pipe_pnt_print/g
s/rt_pr_pt/rt_pr_partition/g
s/rt_pr_pt_vls/rt_pr_partition_vls/g
s/rt_pt_node/rt_pnt_node/g
s/rt_pt_sort/rt_pnt_sort/g
s/rt_vls_metaballpt/rt_metaball_pnt_vls/g
s/rt_vls_pipept/rt_pipe_pnt_vls/g
s/split_pipept/pipe_split_pnt/g
s/tclcad_bn_dist_pt2_lseg2/tclcad_bn_dist_pnt2_lseg2/g
s/tclcad_bn_mat_xform_about_pt/tclcad_bn_mat_xform_about_pnt/g
s/wdb_metaballpt/wdb_metaball_pnt/g
s/wdb_pipept/wdb_pipe_pnt/g
        renamed points from pt to pnt for consistency [7.30]
s/proe-brl/creo-brl/g
        replaced by newer creo plugin [7.30]

7.32
----
s/facetall.sh/mged -c facetize/g
        replaced by more improved facetize command [7.30]
s/pixcmp -s/pixcmp -q/g
s/pixcmp -l/pixcmp -d/g
	changed pixcmp options for consistency with new options [7.32]