@@ -51,6 +51,7 @@
 
 #include "bg/defines.h"
 #include "bg/chull.h"
+#include "bg/clip.h"
 #include "bg/lseg.h"
 #include "bg/obr.h"
 #include "bg/polygon.h"
