@@ -19,19 +19,19 @@
  */
 
 /*----------------------------------------------------------------------*/
-/** @addtogroup bn_clip
+/** @addtogroup bg_clip
  * @brief
  * Clipping functions
  */
 /** @{ */
 /** @file clip.h */
 
-#ifndef BN_CLIP_H
-#define BN_CLIP_H
+#ifndef BG_CLIP_H
+#define BG_CLIP_H
 
 #include "common.h"
 #include "vmath.h"
-#include "bn/defines.h"
+#include "bg/defines.h"
 
 __BEGIN_DECLS
 
@@ -39,7 +39,7 @@ __BEGIN_DECLS
  * @brief
  * Clip a 2-D integer line seg against the size of the display
  */
-BN_EXPORT extern int bn_lseg_clip(fastf_t *xp1, fastf_t *yp1, fastf_t *xp2, fastf_t *yp2, fastf_t clip_min, fastf_t clip_max);
+BG_EXPORT extern int bg_lseg_clip(fastf_t *xp1, fastf_t *yp1, fastf_t *xp2, fastf_t *yp2, fastf_t clip_min, fastf_t clip_max);
 
 
 /**
@@ -59,11 +59,11 @@ BN_EXPORT extern int bn_lseg_clip(fastf_t *xp1, fastf_t *yp1, fastf_t *xp2, fast
  * Implicit Return -
  * if !0 was returned, "a" and "b" have been clipped to the RPP.
  */
-BN_EXPORT extern int bn_ray_vclip(vect_t a, vect_t b, fastf_t *min_pt, fastf_t *max_pt);
+BG_EXPORT extern int bg_ray_vclip(vect_t a, vect_t b, fastf_t *min_pt, fastf_t *max_pt);
 
 __END_DECLS
 
-#endif  /* BN_CLIP_H */
+#endif  /* BG_CLIP_H */
 
 /** @} */
 
